# NitroCppTest-MauroPisu

./: CMakeLists.txt  README.md  main.cpp  rectangle.cpp  rectangle.h
src/: CMakeLists.txt
src/intersection/: CMakeLists.txt  main.cpp
src/rectangle_lib/: CMakeLists.txt  rectangle.cpp  rectangle.h
testfiles/: big_numbers.json  concentric.json  invalid_all.json  invalid_some.json  lots_of_rectangles.json  malformed.json  no_array.json  no_rects.json  same_rectangle_multiple_times.json  test1.json  test2.json
unittest/: CMakeLists.txt  test_contstructors.cpp  test_intersection.cpp  test_rectangle.cpp
